fix(java): use get(0) instead of getFirst() for JDK compatibility